# mcp-lektor

./: .env.example  .gitignore  2023 10 15 unterordnen - gehts noch - kurz.docx  260306_gemini_log.md  260307_gemini_log.json  260307_gemini_log.md  260308_gemini_log.md  260310_gemini_log.json  260310_gemini_log.md  260312_gemini_log.json  260313_gemini_log.md  Dockerfile  debug_epheser.py  docker-compose.yaml  lektoriert_2023 10 15 unterordnen - gehts noch - kurz (15).docx  pyproject.toml  test_regex.py
config/: config.yaml  confused_words.yaml  typography_rules.yaml
docs/: CHANGELOG.md  CODING_STYLE.md  DEVELOPMENT_GUIDELINES.md  EVOLUTION.md  PROJECT_BRIEFING.md  WORKFLOW.md
docs/adr/: ADR-0000-template.md  ADR-0001-mcp-based-interactive-proofreading-server.md  ADR-0002-refined-configuration-and-model-separation.md  ADR-0003-consolidation-of-quotation-mark-logic.md  ADR-0004-removal-of-bible-offline-fallback.md  ADR-0005-consolidation-of-bible-validation-on-bibelserver.md  ADR-0005-removal-of-bible-api-integration.md  ADR-0006-integration-of-bible-validation-into-proofreading-workflow.md  ADR-0007-local-bible-knowledge-base.md  ADR-0008-langdock-cloud-integration-and-file-handling.md
docs/agent/: AGENT_SYSTEM_PROMPT.md  USER_GUIDE.md
docs/gemini_log/: 260306_gemini_log.json  260306_gemini_log_a.json  260306_gemini_log_a.md  260307_gemini_log.json  260308_gemini_log.json  260310_gemini_log.json  260310_gemini_log.md  260312_gemini_log.md  260313_gemini_log.json  260318_gemini_log.md  (+5 more)
scripts/: interactive_e2e_test.py  test_base64_upload.py
tests/: conftest.py
(+68 files in other folders)
